--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <!-- AOS CSS (para animaciones data-aos) -->
 <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+<link rel="stylesheet" href="style.css">
 
 
   <title>Tarjeta Digital | Urban Threads</title>
