agregar link de WhatsApp

--- a/index.html
+++ b/index.html
@@ -673,9 +673,14 @@ section{ position:relative; }
 
 </head>
 <body>
-    <a href="https://api.whatsapp.com/send?phone=525586010744&text=Me%20interesa%20sus%20Servicios" class="whatsapp-bubble" title="Enviar mensaje a través de WhatsApp">
-    <i class="fab fa-whatsapp fa-1x"></i>
+   <a href="https://wa.me/523343340062?text=Me%20interesa%20sus%20servicios"
+   class="whatsapp-bubble"
+   title="Enviar mensaje a través de WhatsApp"
+   target="_blank"
+   rel="noopener noreferrer">
+  <i class="fab fa-whatsapp fa-1x"></i>
 </a>
+
   <span class="whatsapp-label">Envía un Mensaje</span>
    
     <!-- Navbar -->
@@ -1292,50 +1297,50 @@ section{ position:relative; }
 
       <!-- Datos + Mapa -->
       <div class="col-lg-7">
-        <div class="card h-100">
-          <div class="card-body p-4 d-flex flex-column">
-            <h5 class="mb-3">Datos de contacto</h5>
+  <div class="card h-100">
+    <div class="card-body p-4 d-flex flex-column">
+      <h5 class="mb-3">Datos de contacto</h5>
 
-            <ul class="list-unstyled contact-list mb-4">
-              <li>
-                <span class="icon-badge"><i class="bi bi-geo-alt-fill"></i></span>
-                <div>
-                  <strong>Ubicación</strong><br>
-                 Roma Sur
-                </div>
-              </li>
-              <li>
-                <span class="icon-badge"><i class="bi bi-telephone-fill"></i></span>
-                <div>
-                  <strong>Teléfono / WhatsApp</strong><br>
-                  <a href="" target="_blank" rel="noopener noreferrer" rel="noopener noreferrer">3343340062</a>
-                </div>
-              </li>
-              <li>
-                <span class="icon-badge"><i class="bi bi-envelope-fill"></i></span>
-                <div>
-                  <strong>Correo</strong><br>
-                  <a href="">creaciones19@gmail.com</a>
-                </div>
-              </li>
-              <li>
-                <span class="icon-badge"><i class="bi bi-clock-fill"></i></span>
-                <div>
-                  <strong>Horario</strong><br>
-                  Lunes a Viernes · 10:00–17:00
-                </div>
-              </li>
-            </ul>
+      <ul class="list-unstyled contact-list mb-4">
+        <li>
+          <span class="icon-badge"><i class="bi bi-geo-alt-fill"></i></span>
+          <div>
+            <strong>Ubicación</strong><br>
+            Roma Sur
+          </div>
+        </li>
+        <li>
+          <span class="icon-badge"><i class="bi bi-telephone-fill"></i></span>
+          <div>
+            <strong>Teléfono / WhatsApp</strong><br>
+            <a href="https://wa.me/523343340062" target="_blank" rel="noopener noreferrer" rel="noopener noreferrer">3343340062</a>
+          </div>
+        </li>
+        <li>
+          <span class="icon-badge"><i class="bi bi-envelope-fill"></i></span>
+          <div>
+            <strong>Correo</strong><br>
+            <a href="mailto:creaciones19@gmail.com">creaciones19@gmail.com</a>
+          </div>
+        </li>
+        <li>
+          <span class="icon-badge"><i class="bi bi-clock-fill"></i></span>
+          <div>
+            <strong>Horario</strong><br>
+            Lunes a Viernes · 10:00–17:00
+          </div>
+        </li>
+      </ul>
 
-            <!-- Mapa -->
-            <div class="ratio ratio-16x9 mt-auto">
-              <iframe
-                class="map-embed rounded"
-                src=""
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-              </iframe>
+      <!-- Mapa -->
+      <div class="ratio ratio-16x9 mt-auto">
+        <iframe
+          class="map-embed rounded"
+          src=""
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
             </div>
 
           </div>
@@ -1353,27 +1358,32 @@ section{ position:relative; }
     <div class="row g-4 pb-4">
 
       <!-- Marca -->
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="d-flex align-items-center gap-3 mb-3">
-         <img src="LOGO.png" alt="SuperVolante" class="footer-logo" />
+    <div class="col-12 col-md-6 col-lg-4">
+  <div class="d-flex align-items-center gap-3 mb-3">
+    <img src="LOGO.png" alt="SuperVolante" class="footer-logo" />
+    <strong class="fs-5">creaciones19</strong>
+  </div>
 
-          <strong class="fs-5">creaciones19</strong>
-        </div>
-        <p class="footer-text">
-          Micrositios y landing pages enfocados en conversión: WhatsApp, pagos,
-          video, galería y más. Hechos para emprendedores y profesionales que
-          quieren resultados sin complicaciones.
-        </p>
+  <p class="footer-text">
+    Micrositios y landing pages enfocados en conversión: WhatsApp, pagos,
+    video, galería y más. Hechos para emprendedores y profesionales que
+    quieren resultados sin complicaciones.
+  </p>
 
-        <div class="d-flex gap-2 mt-3">
-          <a class="btn btn-outline-light btn-sm rounded-pill px-3" href="" target="_blank" rel="noopener noreferrer">
-            <i class="bi bi-whatsapp me-1"></i> Escríbenos
-          </a>
-          <a class="btn btn-outline-light btn-sm rounded-pill px-3" href="">
-            <i class="bi bi-envelope me-1"></i> Correo
-          </a>
-        </div>
-      </div>
+  <div class="d-flex gap-2 mt-3">
+    <a class="btn btn-outline-light btn-sm rounded-pill px-3"
+       href="https://wa.me/523343340062?text=Hola,%20me%20interesa%20información%20de%20sus%20servicios"
+       target="_blank"
+       rel="noopener noreferrer">
+      <i class="bi bi-whatsapp me-1"></i> Escríbenos
+    </a>
+
+    <a class="btn btn-outline-light btn-sm rounded-pill px-3"
+       href="mailto:creaciones19@gmail.com?subject=Información&body=Hola,%20me%20interesa%20saber%20más">
+      <i class="bi bi-envelope me-1"></i> Correo
+    </a>
+  </div>
+</div>
 
       <!-- Enlaces -->
       <div class="col-6 col-md-3 col-lg-2">
@@ -1401,21 +1411,38 @@ section{ position:relative; }
       </div>
 
       <!-- Contacto -->
-      <div class="col-12 col-lg-3">
-        <h6 class="footer-title">Contacto</h6>
-        <ul class="list-unstyled footer-contact">
-          <li><i class="bi bi-geo-alt-fill"></i> Roma Sur</li>
-          <li><i class="bi bi-telephone-fill"></i> <a href="" target="_blank" rel="noopener noreferrer">3343340062</a></li>
-          <li><i class="bi bi-envelope-fill"></i> <a href="">creaciones19@gmail.com</a></li>
-        </ul>
+  <div class="col-12 col-lg-3">
+  <h6 class="footer-title">Contacto</h6>
+  <ul class="list-unstyled footer-contact">
+    <li>
+      <i class="bi bi-geo-alt-fill"></i> Roma Sur
+    </li>
 
-        <div class="footer-social mt-2">
-          <a href="" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-          <a href="" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-          <!-- <a href="#" aria-label="YouTube"><i class="bi bi-youtube"></i></a> -->
-          <a href="" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
-        </div>
-      </div>
+    <li>
+      <i class="bi bi-telephone-fill"></i>
+      <a href="https://wa.me/523343340062" target="_blank" rel="noopener noreferrer">
+        3343340062
+      </a>
+    </li>
+
+    <li>
+      <i class="bi bi-envelope-fill"></i>
+      <a href="mailto:creaciones19@gmail.com?subject=Información&body=Hola,%20me%20interesa%20saber%20más">
+        creaciones19@gmail.com
+      </a>
+    </li>
+  </ul>
+
+  <div class="footer-social mt-2">
+    <a href="https://wa.me/523343340062" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
+      <i class="bi bi-whatsapp"></i>
+    </a>
+    <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+    <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+    <a href="#" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
+  </div>
+</div>
+
     </div>
 
     <hr class="footer-divider">
@@ -1498,10 +1525,11 @@ document.addEventListener("DOMContentLoaded", () => {
 
 // ===== CTA Comprar por WhatsApp (Planes) =====
 function enviarWhatsapp(plan) {
-  const phone = "3343340062"; // tu número con lada
-  const msg = `Hola, me interesa mas informacion ¿Me das info y cómo se contrata?`;
-  const url = `https://wa.me/${phone}?text=${encodeURIComponent(msg)}`;
-  window.open(url, "_blank", "noopener,noreferrer");
+const phone = "523343340062"; // México +52
+const msg = "Hola, me interesa más información. ¿Me das info y cómo se contrata?";
+const url = `https://wa.me/${phone}?text=${encodeURIComponent(msg)}`;
+window.open(url, "_blank", "noopener,noreferrer");
+
 }
 
 // ===== FORM CONTACTO -> ENVÍA A WHATSAPP =====
@@ -1516,14 +1544,15 @@ document.addEventListener("DOMContentLoaded", () => {
     const tel = document.getElementById("c-telefono")?.value?.trim() || "";
     const mensaje = document.getElementById("c-mensaje")?.value?.trim() || "";
 
-    const phone = "3343340062";
-    const text =
-      `Hola, soy ${nombre}.\n` +
-      `Tel: ${tel}\n\n` +
-      `${mensaje || "Me interesa información de sus servicios."}`;
+   const phone = "523343340062"; // WhatsApp México +52
+const text =
+  `Hola, soy ${nombre}.\n` +
+  `Tel: ${tel}\n\n` +
+  `${mensaje || "Me interesa información de sus servicios."}`;
 
-    const url = `https://wa.me/${phone}?text=${encodeURIComponent(text)}`;
-    window.open(url, "_blank", "noopener,noreferrer");
+const url = `https://wa.me/${phone}?text=${encodeURIComponent(text)}`;
+window.open(url, "_blank", "noopener,noreferrer");
+
   });
 });
 
