--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/png" sizes="32x32" href="LOGO.png"><link rel="icon" type="image/png" sizes="192x192" href="LOGO.png"><link rel="apple-touch-icon" href="LOGO.png"><meta name="msapplication-TileImage" content="LOGO.png">
 
 
   <title>Tarjeta Digital | Urban Threads</title>
